refactor transaction handling to improve balance management and enhance error reporting